# CatClassifier

./: .dockerignore  .gitignore  01_prg_kaggle_data.py  01_prg_scrape_imgs.py  02_prg_scrape_imgs.py  03_prg_keras_model.py  03a_prg_keras_model.py  03b_prg_torch_model.py  Dockerfile  README.md  analysis_results.ipynb  cons.py  exeDocker.bat  exeDocker.cmd  exeTorchModel.bat  exeWebscraper.bat  main.py  prg_scrape_imgs.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-main-push.yml  dev-pull-requests.yml  dockerhub-main-push.yml  unittest-dev.yml  unittest-main-pr.yml  unittest-main-push.yml
aws/: cons.py  docker_extract_data.sh  ec2_connect.bat  ec2_extract_data.bat  exeExtractDataEC2.bat  exeRunEC2.cmd  exeSetUpEC2.bat  exeSetUpEC2.cmd  linux_docker_setup.sh  prg_run_ec2_instance.py  refresh_credentials.cmd
aws/ref/: create_fleet_config.json  launch_template_config.json  (+1 more)
conda/: catclass.bat  catclass.cmd  catclass.sh
conda_env/: catclass.bat
data_prep/: data_prep.py
doc/: CatClassifier.postman_collection.json  catclassifier.drawio
env/: catclass.bat  ec2_connect.bat  linux_docker_setup.sh  scrapy.cfg
kaggle/: download_comp_data.py  download_kaggle_data.py
keras/: keras_model.py
model/: api.py  cons.py  exeApi.cmd  exeApi.sh  exeKerasModel.cmd  exeKerasModel.sh  exeTorchModel.bat  exeTorchModel.cmd  exeTorchModel.sh  exeUnittests.cmd  keras_model.py  prg_keras_model.py  prg_torch_model.py
notebooks/: keras_analysis_results.ipynb  torch_analysis_results.ipynb
playwright_webscraper/: cons.py  main.py
qmarkdown/: analysis_results.qmd
report/: keras_analysis_results.ipynb  keras_analysis_results.qmd  torch_analysis_results.ipynb  torch_analysis_results.qmd
scrapy_webscraper/: items.py  middlewares.py
scripts/: cons.py  data_prep.py  keras_model.py
webscrapers/: commandline_interface.py  cons.py  download_comp_data.py  exeUnittests.cmd  exeWebscraper.bat  exeWebscraper.cmd  exeWebscraper.sh  prg_scrape_imgs.py
(+93 files in other folders)
