[project]
name = "catclassifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "beartype==0.19.0",
    "beautifulsoup4==4.13.3",
    "boto3==1.36.13",
    "jupyterlab==4.3.5",
    "kaggle==1.6.17",
    "keras==3.8.0",
    "matplotlib==3.10.0",
    "numpy==2.0.2",
    "opencv-python==4.11.0.86",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "tensorflow-cpu==2.18.0",
]
