[project]
name = "catclassifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.11"
dependencies = [
    "beartype==0.19.0",
    "beautifulsoup4==4.13.3",
    "boto3==1.36.13",
    "jupyterlab==4.1",
    "kaggle==1.7.4.5",
    "keras==3.13.2",
    "matplotlib==3.10.8",
    "numpy==2.3.5",
    "opencv-python==4.11.0.86",
    "pandas==3.0.1",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "tensorflow-cpu==2.21.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu129"
